fix: Shift fuel totals wrong. Redo shift fuel totals calculations with much more efficient method

--- a/dsr/public/css/custom.css
+++ b/dsr/public/css/custom.css
@@ -7,7 +7,7 @@
     border-color: darkred;
 }
 .form-control {
-    background-color: lawngreen;
+    background-color: yellowgreen;
 }
 .form-control::placeholder {
     color: firebrick;
